# module-event

./: CMakeLists.txt  README.md  build.cmd  http_tcpserver.cpp
Shared/: CMakeLists.txt
Utils/: CMakeLists.txt
Utils/Include/: base.h
WebSocketClient/: CMakeLists.txt  main.cpp
WebSocketServer/: CMakeLists.txt  main.cpp
websocket-client/: CMakeLists.txt  main.cpp
websocket-server/: CMakeLists.txt  main.cpp
